--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,16 +17,18 @@
         android:id="@+id/textView"
         android:textSize="@dimen/h1"
         android:layout_centerHorizontal="true"
-        android:textColor="@color/text" />
+        android:textColor="@color/text"
+        android:textStyle="bold" />
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="New Button"
+        android:text="About Me"
         android:id="@+id/button"
         android:layout_alignParentLeft="false"
         android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true" />
+        android:layout_alignParentBottom="true"
+        android:textStyle="bold" />
 
     <ListView
         android:layout_width="wrap_content"
