--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="kmutnb.khemmalakul.teay.mytraffic.MainActivity"
-    android:background="@drawable/wallpapers_b_05">
+    android:background="@drawable/bg600">
 
     <TextView
         android:layout_width="wrap_content"
